=== librsvg 1.1.5 ===

2002-03-04  Darin Adler  <darin@bentspoon.com>

	* NEWS: News for 1.1.5.

2002-02-28  Darin Adler  <darin@bentspoon.com>

	* configure.in: Bump version.

2002-02-28  Alexander Larsson  <alla@lysator.liu.se>

	* rsvg.h: (rsvg_pixbuf_from_file_at_zoom_with_max): New function.
	* rsvg.c: (RsvgSizeType, struct RsvgSizeCallbackData):
	Use enum instead of booleans to store the type of size callback.
	(rsvg_size_callback): Implement ZOOM_MAX, other changes due to the
	usage of the RsvgSizeType enum.
	(rsvg_pixbuf_from_file_at_zoom_with_max): Implement new function.

=== librsvg 1.1.4 ===

2002-02-25  Darin Adler  <darin@bentspoon.com>

	* NEWS: News for 1.1.4.

2002-02-25  Darin Adler  <darin@bentspoon.com>

	* .cvsignore: Ignore new test program binary.
	* configure.in: Bump version.

2002-02-24  Alexander Larsson  <alla@lysator.liu.se>

	* rsvg.c: (rsvg_pixbuf_from_file_at_max_size): New function
	for scaling an svg uniformly to fit in a rectangle.
	(rsvg_size_callback): Handle max_size_set
	(rsvg_pixbuf_from_file_at_zoom),(rsvg_pixbuf_from_file_at_size):
	Set max_size_set to false.
	
	* rsvg.h: Add rsvg_pixbuf_from_file_at_max_size()

2002-02-20  Michael Meeks  <michael@ximian.com>

	* Makefile.am: add test-performance.c

	* test-performance.c: impl.

2002-02-17  Michael Meeks  <michael@ximian.com>

	* rsvg.c (rsvg_handle_write): make sure we set
	replaceEntities before we parse any of the buffer.
	(rsvg_pixbuf_from_file_at_size),
	(rsvg_pixbuf_from_file_at_zoom): read / parse
	SVG_BUFFER_SIZE bytes at a time, not 3.
	(rsvgSAXHandler): kill bogus module global.
	(rsvg_error_cb): impl.

2002-02-18  Gediminas Paulauskas <menesis@delfi.lt>

	* configure.in: remove GNOME_COMMON_INIT, GNOME_PLATFORM_GNOME_2

2002-02-16  Alexander Larsson  <alla@lysator.liu.se>

	* test-71297.svg: Add test case.

2002-02-12  Darin Adler  <darin@bentspoon.com>

	* rsvg-paint-server.c: (rsvg_render_paint_server): Add a
	return_if_fail.
	